hphp/hack/test/typecheck/function_pointer/class_const_simple_bad.php.exp
File "class_const_simple_bad.php", line 9, characters 6-12:
Invalid argument (Typing[4110])
File "class_const_simple_bad.php", line 4, characters 30-32:
Expected int
File "class_const_simple_bad.php", line 9, characters 6-12:
But got string
