hphp/hack/test/typecheck/function_pointer/class_const_simple_bad.php
<?hh

final class Foo {
  public static function bar(int $x): void {}
}

function test(): void {
  $x = Foo::bar<>;
  $x('hello');
}
